--- a/index.html
+++ b/index.html
@@ -3,135 +3,274 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vanilla DevWeb</title>
+    <title>Vanilla DevWeek</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" cossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
     <nav id="nav">
         <div class="navTop">
-            <div class="navItem">
+            <div class="newItem">
                 <img src="./img/sneakers.png" alt="">
             </div>
-             <div class="navItem">
+            <div class="newItem">
                 <div class="search">
-                    <input type="text" placeholder="Search..." class="searchInnput">
-                    <img src="./img/search.png" alt="">
+                    <input type="text" placeholder="Search..." class="searchInput">
+                    <img src="./img/search.png" 
+                            alt=""
+                            srcset=""
+                            width="20"
+                            height="20">
                 </div>
-             </div>
-              <div class="navItem">
-                <span class="limitedOffer">Limited Ofer!!!</span>
-              </div>
+            </div>
+            <div class="newItem">
+                <span class="limitedOffer">Limited Offer!!!</span>
+            </div>
         </div>
         <div class="navBottom">
-            <h3 class="menuIten">AIR FORCE</h3>
-            <h3 class="menuIten">JORDAN</h3>
-            <h3 class="menuIten">BLAZER</h3>
-            <h3 class="menuIten">CRATER</h3>
-            <h3 class="menuIten">HIPPIE</h3>
+            <h3 class="menuItem">AIR FORCE</h3>
+            <h3 class="menuItem">JORDAN</h3>
+            <h3 class="menuItem">BLAZER</h3>
+            <h3 class="menuItem">CRATER</h3>
+            <h3 class="menuItem">HIPPIE</h3>
         </div>
     </nav>
+
     <div class="slider">
         <div class="sliderWrapper">
             <div class="sliderItem">
-                <img src="./img/air.png" alt="">
+                <img src="./img/air.png" alt="" class="sliderImg">
                 <div class="sliderBg">
                     <h1 class="sliderTitle">
-                        AIR FORCE </br> NEW </br> SEASON </br>
-                      </h1>  
-                      <h2 class="sliderPrice">$119</h2>
-                      <a href="#product">
-                            <button class="buyButton"> BUY NOW!!!</button>
-                        </a>
+                        AIR FORCE </br> NEW </br> SEASON
+                    </h1>
+                    <h2 class="sliderPrice">$119</h2>
+                    <a href="#product">
+                        <button class="buyButton"> BUY NOW !!!</button>
+                    </a>
                 </div>
             </div>
-             <div class="sliderItem">
-                <img src="./img/jordan.png" alt="">
+            <div class="sliderItem">
+                <img src="./img/jordan.png" alt="" class="sliderImg">
                 <div class="sliderBg">
                     <h1 class="sliderTitle">
-                        JORDAN </br> NEW </br> SEASON </br>
-                      </h1>  
-                      <h2 class="sliderPrice">$149</h2>
-                      <a href="#product">
-                            <button class="buyButton"> BUY NOW!!!</button>
-                        </a>
+                        JORDAN </br> NEW </br> SEASON
+                    </h1>
+                    <h2 class="sliderPrice">$149</h2>
+                    <a href="#product">
+                        <button class="buyButton"> BUY NOW !!!</button>
+                    </a>
                 </div>
             </div>
-             <div class="sliderItem">
-                <img src="./img/blazer.png" alt="">
+            <div class="sliderItem">
+                <img src="./img/blazer.png" alt="" class="sliderImg">
                 <div class="sliderBg">
                     <h1 class="sliderTitle">
-                        BLAZER </br> NEW </br> SEASON </br>
-                      </h1>  
-                      <h2 class="sliderPrice">$109</h2>
-                      <a href="#product">
-                            <button class="buyButton"> BUY NOW!!!</button>
-                        </a>
+                        BLAZER </br> NEW </br> SEASON
+                    </h1>
+                    <h2 class="sliderPrice">$109</h2>
+
+                    <a href="#product">
+                        <button class="buyButton"> BUY NOW !!!</button>
+                    </a>
                 </div>
             </div>
-             <div class="sliderItem">
-                <img src="./img/crater.png" alt="">
+            <div class="sliderItem">
+                <img src="./img/crater.png" alt="" class="sliderImg">
                 <div class="sliderBg">
                     <h1 class="sliderTitle">
-                        CRATER </br> NEW </br> SEASON </br>
-                      </h1>  
-                      <h2 class="sliderPrice">$129</h2>
-                      <a href="#product">
-                            <button class="buyButton"> BUY NOW!!!</button>
-                        </a>
+                        CRATER </br> NEW </br> SEASON
+                    </h1>
+                    <h2 class="sliderPrice">$129</h2>
+
+                    <a href="#product">
+                        <button class="buyButton"> BUY NOW !!!</button>
+                    </a>
                 </div>
             </div>
-             <div class="sliderItem">
-                <img src="./img/hippie.png" alt="">
+            <div class="sliderItem">
+                <img src="./img/hippie.png" alt="" class="sliderImg">
                 <div class="sliderBg">
                     <h1 class="sliderTitle">
-                        HIPPIE </br> NEW </br> SEASON </br>
-                      </h1>  
-                      <h2 class="sliderPrice">$99</h2>
-                      <a href="#product">
-                            <button class="buyButton"> BUY NOW!!!</button>
-                        </a>
+                        HIPPIE </br> NEW </br> SEASON
+                    </h1>
+                    <h2 class="sliderPrice">$99</h2>
+                    <a href="#product">
+                        <button class="buyButton"> BUY NOW !!!</button>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
     <div class="features">
         <div class="feature">
-            <img clas="featureIcon"src="./img/shipping.png" alt="">
+            <img class="featureIcon" src="./img/shipping.png" alt="">
             <span class="featureTitle">FREE SHIPPING</span>
             <span class="featureDesc">
                 Free worldwide shipping on all orders.
             </span>
         </div>
         <div class="feature">
-            <img clas="featureIcon"src="./img/return.png" alt="">
+            <img class="featureIcon" src="./img/return.png" alt="">
             <span class="featureTitle">30 DAYS RETURN</span>
             <span class="featureDesc">
                 No question return and easy refund in 14 days.
             </span>
         </div>
         <div class="feature">
-            <img clas="featureIcon"src="./img/gift.png" alt="">
+            <img class="featureIcon" src="./img/gift.png" alt="">
             <span class="featureTitle">GIFT CARDS</span>
             <span class="featureDesc">
                 Buy gift cards and use coupon codes easily.
             </span>
         </div>
         <div class="feature">
-            <img clas="featureIcon"src="./img/contact.png" alt="">
-            <span class="featureTitle">CONTACT US!!!</span>
+            <img class="featureIcon" src="./img/contact.png" alt="">
+            <span class="featureTitle">CONTACT US!</span>
             <span class="featureDesc">
                 Keep in touch via email and support system.
             </span>
         </div>
     </div>
-    <div class="product"></div>
-    <div class="gallery"></div>
-    <div class="newSeason"></div>
-    <footer></footer>
+    <div class="product" id="product">
+        <img src="./img/air.png" alt="" class="productImg">
+        <div class="productDetails">
+            <h1 class="productTitle">AIR FORCE</h1>
+            <h2 class="productPrice">$199</h2>
+            <p class="productDes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet deserunt tempora perspiciatis facere tenetur ipsa.</p>
+            <div class="colors">
+                <div class="color"></div>
+                <div class="color"></div>
+            </div>
+            <div class="sizes">
+                <div class="size">42</div>
+                <div class="size">43</div>
+                <div class="size">44</div>
+            </div>
+            <button class="productButton">BUY NOW!!!</button>
+        </div>
+        <div class="payment">
+            <h1 class="payTitle">Personal Information</h1>
+            <label>Name and Surname</label>
+            <input type="text" placeholder="John Doe" class="payInput">
+            <label>Phone Number</label>
+            <input type="text" placeholder="+1 234 5678" class="payInput">
+            <label>Address</label>
+            <input type="text" placeholder="Elton 5t 21 22-145" class="payInput">
+            <h1 class="payTitle">Card Information</h1>
+            <div class="cardIcons">
+                <img src="./img/visa.png" alt="" class="cardIcon">
+                <img src="./img/master.png" alt="" class="cardIcon">
+            </div>
+            <input type="password" class="payInput" name="" id="" placeholder="Card Number">
+            <div class="cardInfo">
+                <input type="text" placeholder="mm" class="payInput sm">
+                <input type="text" placeholder="yyyy" class="payInput sm">
+                <input type="text" placeholder="cvv" class="payInput sm">
+            </div>
+            <button class="payButton">Checkout!!!</button>
+            <span class="close">X</span>
+
+
+        </div>
+
+    </div>
+    <div class="gallery">
+        <div class="galleryItem">
+            <h1 class="galleyTitle">
+                Be Yourself!!!
+            </h1>
+            <img  class="galleryImg" src="https://images.pexels.com/photos/9295809/pexels-photo-9295809.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="">
+        </div>
+        <div class="galleryItem">
+            <img  class="galleryImg" src="https://images.pexels.com/photos/1040427/pexels-photo-1040427.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="">
+            <h1 class="galleyTitle">
+                This is the First Day of your new Life
+            </h1>
+        </div>
+        <div class="galleryItem">
+            <h1 class="galleyTitle">
+                Just Do It!!!
+            </h1>
+            <img  class="galleryImg" src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="">
+        </div>
+    </div>
+    <div class="newSeason">
+        <div class="nsItem">
+            <img class="nsImg"src="https://images.pexels.com/photos/4753986/pexels-photo-4753986.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="">
+        </div>
+        <div class="nsItem">
+            <h3 class="nsTitleSm">WINTER NEW ARRIVALS</h3>
+            <h1 class="nsTitle">New Season</h1>
+            <h1 class="nsTitle">New Collection</h1>
+            <a href="#nav">
+                <button class="nsButton">CHOOSE YOUR STYLE</button>
+            </a>
+        </div>
+        <div class="nsItem">
+            <img src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="" class="nsImg">
+        </div>
+    </div>
+    <footer>
+        <div class="footerLeft">
+            <div class="footerMenu">
+                <h1 class="fMenuTitle">About Us</h1>
+                <ul class="fList">
+                    <li class="fListItem">Company</li>
+                    <li class="fListItem">Contact</li>
+                    <li class="fListItem">Careers</li>
+                    <li class="fListItem">Affiliates</li>
+                    <li class="fListItem">Store</li>
+                </ul>
+            </div>
+            <div class="footerMenu">
+                <h1 class="fMenuTitle">Useful Links</h1>
+                <ul class="fList">
+                    <li class="fListItem">Support</li>
+                    <li class="fListItem">Refound</li>
+                    <li class="fListItem">FAQ</li>
+                    <li class="fListItem">Feedback</li>
+                    <li class="fListItem">Stories</li>
+                </ul>
+            </div>
+            <div class="footerMenu">
+                <h1 class="fMenuTitle">Products</h1>
+                <ul class="fList">
+                    <li class="fListItem">Air Force</li>
+                    <li class="fListItem">Jordan</li>
+                    <li class="fListItem">Blazer</li>
+                    <li class="fListItem">Crater</li>
+                    <li class="fListItem">Hippie</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footerRight">
+            <div class="footerRightMenu">
+                <h1 class="fMenuTitle">Suscribe to our newsletter</h1>
+                <div class="fMail">
+                    <input type="text" placeholder="Join!!!" class="fInput">
+                    <button class="fButton">Join!!!</button>
+                </div>
+            </div>
+            <div class="footerRightMenu">
+                <h1 class="fMenuTitle">
+                    Follow Us!!!
+                </h1>
+                <div class="fIcons">
+                    <img src="./img/facebook.png" alt="" class="fIcon">
+                    <img src="./img/twitter.png" alt="" class="fIcon">
+                    <img src="./img/instagram.png" alt="" class="fIcon">
+                    <img src="./img/whatsapp.png" alt="" class="fIcon">
+                </div>
+            </div>
+            <div class="footerRightMenu">
+                <span class="copyright">MARS Programming 2022</span>
+            </div>
+        </div>
+    </footer>
+
     <script src="./js/app.js"></script>
 </body>
 </html>
